test branch protection

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Sylvain Janet</title>
 </head>
 <body>
-  <h1>Page en construction</h1>
+  <h1>Page en construction...</h1>
 </body>
 </html>
