skill and about

--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
             <h1 class="intro-title mb-4">I am Sylvain Janet</h1>
             <p class="intro-subtitle">
               <span class="text-slider-items"
-                >Web Developer,FullStack Developer, Mangeur de fraise, En train
-                de construire ce site</span
+                >FullStack Developer,Trainer,Mathematician,Musician</span
               ><strong class="text-slider"></strong>
             </p>
             <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
@@ -132,7 +131,7 @@
                         </p>
                         <p>
                           <span class="title-s">Profile: </span>
-                          <span>full stack developer</span>
+                          <span>FullStack developer</span>
                         </p>
                         <p>
                           <span class="title-s">Email: </span>
@@ -146,8 +145,32 @@
                     </div>
                   </div>
                   <div class="skill-mf">
-                    <p class="title-s">Skill</p>
-                    <span>TBD, j'en ai promis</span>
+                    <p class="title-s">Skills</p>
+                    <span>Java</span>
+                    <span class="pull-right">90%</span>
+                    <div class="progress">
+                      <div
+                        class="progress-bar"
+                        role="progressbar"
+                        style="width: 90%"
+                        aria-valuenow="90"
+                        aria-valuemin="0"
+                        aria-valuemax="100"
+                      ></div>
+                    </div>
+                    <span>C#</span>
+                    <span class="pull-right">90%</span>
+                    <div class="progress">
+                      <div
+                        class="progress-bar"
+                        role="progressbar"
+                        style="width: 90%"
+                        aria-valuenow="90"
+                        aria-valuemin="0"
+                        aria-valuemax="100"
+                      ></div>
+                    </div>
+                    <span>Python</span>
                     <span class="pull-right">85%</span>
                     <div class="progress">
                       <div
@@ -159,6 +182,54 @@
                         aria-valuemax="100"
                       ></div>
                     </div>
+                    <span>JavaScript / TypeScript</span>
+                    <span class="pull-right">85%</span>
+                    <div class="progress">
+                      <div
+                        class="progress-bar"
+                        role="progressbar"
+                        style="width: 85%"
+                        aria-valuenow="85"
+                        aria-valuemin="0"
+                        aria-valuemax="100"
+                      ></div>
+                    </div>
+                    <span>SQL</span>
+                    <span class="pull-right">80%</span>
+                    <div class="progress">
+                      <div
+                        class="progress-bar"
+                        role="progressbar"
+                        style="width: 80%"
+                        aria-valuenow="80"
+                        aria-valuemin="0"
+                        aria-valuemax="100"
+                      ></div>
+                    </div>
+                    <span>HTML</span>
+                    <span class="pull-right">75%</span>
+                    <div class="progress">
+                      <div
+                        class="progress-bar"
+                        role="progressbar"
+                        style="width: 75%"
+                        aria-valuenow="75"
+                        aria-valuemin="0"
+                        aria-valuemax="100"
+                      ></div>
+                    </div>
+                    <span>LATEX</span>
+                    <span class="pull-right">65%</span>
+                    <div class="progress">
+                      <div
+                        class="progress-bar"
+                        role="progressbar"
+                        style="width: 65%"
+                        aria-valuenow="65"
+                        aria-valuemin="0"
+                        aria-valuemax="100"
+                      ></div>
+                    </div>
                   </div>
                 </div>
                 <div class="col-md-6">
@@ -166,10 +237,46 @@
                     <div class="title-box-2">
                       <h5 class="title-left">About me</h5>
                     </div>
-                    <p class="lead">En construction.</p>
+                    <p class="lead">Développeur FullStack et formateur.</p>
+                    <p class="lead"></p>
                     <p class="lead">
-                      Et oui, pour l'instant je n'ai fait que prendre le
-                      template
+                      Mon parcours professionnel a commencé par des études en
+                      mathématiques : je suis normalien, agrégé de
+                      mathématiques, et j'ai un master en logique et en
+                      informatique théorique.
+                    </p>
+                    <p class="lead">
+                      J'ai entamé ma carrière dans le développement informatique
+                      avec un titre professionnel Concepteur développeur
+                      d'applications Java. J'ai participé au développement de
+                      plusieurs projets. J'ai des compétences dans des
+                      frameworks back-end comme
+                      <strong><em>Spring boot</em></strong> ou
+                      <strong><em>Entity Framework</em></strong
+                      >, et dans des frameworks front-end comme
+                      <strong><em>Angular</em></strong> ou
+                      <strong><em>Vue.js</em></strong
+                      >. J'ai également donné des formations en
+                      <strong><em>Python</em></strong
+                      >, <strong><em>Java</em></strong
+                      >, <strong><em>C#</em></strong
+                      >, <strong><em>Javascript</em></strong> ou encore en
+                      <strong><em>Algorithmique</em></strong
+                      >.
+                    </p>
+                    <p class="lead">
+                      Enfin, j'ai aussi plusieurs projets individuels, dont la
+                      portée est plus large. De la créativité avec la musique,
+                      au divertissement avec des jeux.
+                    </p>
+                    <p class="lead">
+                      Pour plus d'informations, voir
+                      <a
+                        style="color: blue"
+                        href="docs/JanetSylvain_CV.pdf"
+                        target="_blank"
+                        >mon cv</a
+                      >
                     </p>
                   </div>
                 </div>
