avis - contenu et style

--- a/index.html
+++ b/index.html
@@ -492,30 +492,207 @@
             <div id="testimonial-mf" class="owl-carousel owl-theme">
               <div class="testimonial-box">
                 <div class="author-test">
-                  <img
-                    src="img/testimonial-2-2.jpg"
-                    alt=""
-                    class="rounded-circle b-shadow-a"
-                  />
-                  <span class="author">Xavi Alonso</span>
+                  <div class="counter-ico">
+                    <span class="ico-circle"><i class="ion-person"></i></span>
+                  </div>
+                  <span class="author">Joshua VADROT</span>
                 </div>
                 <div class="content-test">
-                  <p class="description lead">En construction.</p>
+                  <span class="comit"><i class="fa fa-quote-left"></i></span>
+                  <p class="description lead">
+                    Le formateur est très compétent, il connait et maîtrise
+                    parfaitement son sujet. C'est un plaisir d'être formé par
+                    Sylvain.
+                  </p>
                   <span class="comit"><i class="fa fa-quote-right"></i></span>
+                  <p class="description lead formation">
+                    12/01/2022 - Java SE Approfondissement
+                  </p>
                 </div>
               </div>
               <div class="testimonial-box">
                 <div class="author-test">
-                  <img
-                    src="img/testimonial-4.jpg"
-                    alt=""
-                    class="rounded-circle b-shadow-a"
-                  />
-                  <span class="author">Marta Socrate</span>
+                  <div class="counter-ico">
+                    <span class="ico-circle"><i class="ion-person"></i></span>
+                  </div>
+                  <span class="author">François BILLON</span>
                 </div>
                 <div class="content-test">
-                  <p class="description lead">En construction.</p>
+                  <span class="comit"><i class="fa fa-quote-left"></i></span>
+                  <p class="description lead">
+                    Bon équilibre entre les cours et les exemples pratiques.
+                    formateur au top, qui sait s'adapter à son interlocutoire.
+                    Beaucoup de pédagogie et de disponibilité de la part de
+                    notre formateur, M.Sylvain JANET. J'espère par la suite
+                    pouvoir poursuivre des formations approfondies en C#, et
+                    pourquoi pas avec le même formateur qui m'a laissé une forte
+                    impression.
+                  </p>
                   <span class="comit"><i class="fa fa-quote-right"></i></span>
+                  <p class="description lead formation">
+                    25/11/2022 - C# Initiation Approfondissement
+                  </p>
+                </div>
+              </div>
+              <div class="testimonial-box">
+                <div class="author-test">
+                  <div class="counter-ico">
+                    <span class="ico-circle"><i class="ion-person"></i></span>
+                  </div>
+                  <span class="author">Tayeb CHERIFI</span>
+                </div>
+                <div class="content-test">
+                  <span class="comit"><i class="fa fa-quote-left"></i></span>
+                  <p class="description lead">
+                    Sylvain a été très professionnel et conciliant. Prêt à
+                    revenir sur toute incompréhension et questions des
+                    stagiaires. Contenu du cours complet et explicite.
+                  </p>
+                  <span class="comit"><i class="fa fa-quote-right"></i></span>
+                  <p class="description lead formation">
+                    06/05/2022 - Python Initiation
+                  </p>
+                </div>
+              </div>
+              <div class="testimonial-box">
+                <div class="author-test">
+                  <div class="counter-ico">
+                    <span class="ico-circle"><i class="ion-person"></i></span>
+                  </div>
+                  <span class="author">Vanessa CHENON</span>
+                </div>
+                <div class="content-test">
+                  <span class="comit"><i class="fa fa-quote-left"></i></span>
+                  <p class="description lead">
+                    Super semaine de formation. Progression logique et concept
+                    abordé très intéressant ! Beaucoup de cas pratiques qu'il
+                    nous a laissé traité, ce qui a permis une meilleur
+                    compréhension du langage. Très bonne maitrise du langage JS
+                    de Sylvain JANET. Formateur très patient et à l'écoute des
+                    stagiaires.
+                  </p>
+                  <span class="comit"><i class="fa fa-quote-right"></i></span>
+                  <p class="description lead formation">
+                    04/11/2022 - Javascript/Ecmascript Initiation
+                  </p>
+                </div>
+              </div>
+              <div class="testimonial-box">
+                <div class="author-test">
+                  <div class="counter-ico">
+                    <span class="ico-circle"><i class="ion-person"></i></span>
+                  </div>
+                  <span class="author">Joshua VADROT</span>
+                </div>
+                <div class="content-test">
+                  <span class="comit"><i class="fa fa-quote-left"></i></span>
+                  <p class="description lead">
+                    Formateur très agréable, sais être disponible et transmet le
+                    cours selon ses compétences, il s'investit dans son cours et
+                    les corrections, il prend le temps d'aider tous le monde au
+                    cas par cas et c'est vraiment un plus&nbsp!
+                  </p>
+                  <span class="comit"><i class="fa fa-quote-right"></i></span>
+                  <p class="description lead formation">
+                    11/03/2022 - Spring MVC Initiation Approfondissement
+                  </p>
+                </div>
+              </div>
+              <div class="testimonial-box">
+                <div class="author-test">
+                  <div class="counter-ico">
+                    <span class="ico-circle"><i class="ion-person"></i></span>
+                  </div>
+                  <span class="author">Sarah MAJEWSKI</span>
+                </div>
+                <div class="content-test">
+                  <span class="comit"><i class="fa fa-quote-left"></i></span>
+                  <p class="description lead">
+                    J'aime beaucoup la logique du cours ou dès que l'on voit une
+                    partie on pratique et on suit avec un exercice. Les exemples
+                    sont pertinents. Sylvain explique bien et n'hésite pas à
+                    répondre à nos questions si l'on en a et à prendre du temps
+                    pour nous expliquer ce que l'on a pas compris.
+                  </p>
+                  <span class="comit"><i class="fa fa-quote-right"></i></span>
+                  <p class="description lead formation">
+                    10/06/2022 - Java SE Approfondissement
+                  </p>
+                </div>
+              </div>
+              <div class="testimonial-box">
+                <div class="author-test">
+                  <div class="counter-ico">
+                    <span class="ico-circle"><i class="ion-person"></i></span>
+                  </div>
+                  <span class="author">Krys BAHIN</span>
+                </div>
+                <div class="content-test">
+                  <span class="comit"><i class="fa fa-quote-left"></i></span>
+                  <p class="description lead">
+                    Formateur convivial et a l’écoute. Procure de bons conseils.
+                    Excellent.
+                  </p>
+                  <span class="comit"><i class="fa fa-quote-right"></i></span>
+                  <p class="description lead formation">
+                    25/11/2022 - C# Initiation Approfondissement
+                  </p>
+                </div>
+              </div>
+              <div class="testimonial-box">
+                <div class="author-test">
+                  <div class="counter-ico">
+                    <span class="ico-circle"><i class="ion-person"></i></span>
+                  </div>
+                  <span class="author">Adil MOULABBI</span>
+                </div>
+                <div class="content-test">
+                  <span class="comit"><i class="fa fa-quote-left"></i></span>
+                  <p class="description lead">
+                    Je recommande le formateur Sylvain JANET pour ses qualités
+                    techniques et pédagogiques. Aussi pour l'adaptationdu
+                    contenu au besoin et sa disponibilité totale.
+                  </p>
+                  <span class="comit"><i class="fa fa-quote-right"></i></span>
+                  <p class="description lead formation">
+                    01/06/2022 - Python Intermédiaire : Bonnes pratiques
+                  </p>
+                </div>
+              </div>
+              <div class="testimonial-box">
+                <div class="author-test">
+                  <div class="counter-ico">
+                    <span class="ico-circle"><i class="ion-person"></i></span>
+                  </div>
+                  <span class="author">Soukaina DAMMANE</span>
+                </div>
+                <div class="content-test">
+                  <span class="comit"><i class="fa fa-quote-left"></i></span>
+                  <p class="description lead">
+                    Formateur à l'écoute des stagiaire. Prend le temps de mettre
+                    en pratiqueles cours.
+                  </p>
+                  <span class="comit"><i class="fa fa-quote-right"></i></span>
+                  <p class="description lead formation">
+                    04/11/2022 - Javascript/Ecmascript Initiation
+                  </p>
+                </div>
+              </div>
+              <div class="testimonial-box">
+                <div class="author-test">
+                  <div class="counter-ico">
+                    <span class="ico-circle"><i class="ion-person"></i></span>
+                  </div>
+                  <span class="author">Geoffrey ROUSSELET</span>
+                </div>
+                <div class="content-test">
+                  <span class="comit"><i class="fa fa-quote-left"></i></span>
+                  <p class="description lead">
+                    Sylvain connait son travail et son milieu, il a réponse a
+                    nos questions et est disponible pour y répondre.
+                  </p>
+                  <span class="comit"><i class="fa fa-quote-right"></i></span>
+                  <p class="description lead formation">09/06/2022 - Maven</p>
                 </div>
               </div>
             </div>
