--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                         </p>
                         <p>
                           <span class="title-s">Phone: </span>
-                          <span>06 62 02 14 12</span>
+                          <span>06&nbsp62&nbsp02&nbsp14&nbsp12</span>
                         </p>
                       </div>
                     </div>
@@ -260,14 +260,15 @@
                       <strong><em>Python</em></strong
                       >, <strong><em>Java</em></strong
                       >, <strong><em>C#</em></strong
-                      >, <strong><em>Javascript</em></strong> ou encore en
+                      >, <strong><em>Javascript</em></strong
+                      >, <strong><em>SQL</em></strong> ou encore en
                       <strong><em>Algorithmique</em></strong
                       >.
                     </p>
                     <p class="lead">
-                      Enfin, j'ai aussi plusieurs projets individuels, dont la
-                      portée est plus large. De la créativité avec la musique,
-                      au divertissement avec des jeux.
+                      Enfin, j'ai plusieurs projets individuels, dont la portée
+                      est plus large. De la créativité avec la musique, au
+                      divertissement avec des jeux.
                     </p>
                     <p class="lead">
                       Pour plus d'informations, voir
@@ -277,6 +278,8 @@
                         target="_blank"
                         >mon cv</a
                       >
+                      <!-- TODO : Experiences, projets, Etudes, Connaissances,
+                      Intérêts -->
                     </p>
                   </div>
                 </div>
@@ -381,21 +384,6 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-3 col-lg-3">
-            <div class="counter-box">
-              <div class="counter-ico">
-                <span class="ico-circle"
-                  ><i class="ion-checkmark-round"></i
-                ></span>
-              </div>
-              <div class="counter-num">
-                <p class="counter">450</p>
-                <span class="counter-text"
-                  >WORKS COMPLETED (bon pas autant)</span
-                >
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-3 col-lg-3">
             <div class="counter-box pt-4 pt-md-0">
               <div class="counter-ico">
                 <span class="ico-circle"
@@ -403,8 +391,34 @@
                 ></span>
               </div>
               <div class="counter-num">
-                <p class="counter">3</p>
+                <p class="counter">2</p>
                 <span class="counter-text">YEARS OF EXPERIENCE</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3 col-lg-3">
+            <div class="counter-box pt-4 pt-md-0">
+              <div class="counter-ico">
+                <span class="ico-circle"
+                  ><i class="ion-checkmark-round"></i
+                ></span>
+              </div>
+              <div class="counter-num">
+                <p class="counter">3</p>
+                <span class="counter-text">Projets</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3 col-lg-3">
+            <div class="counter-box pt-4 pt-md-0">
+              <div class="counter-ico">
+                <span class="ico-circle"
+                  ><i class="ion-checkmark-round"></i
+                ></span>
+              </div>
+              <div class="counter-num">
+                <p class="counter">36</p>
+                <span class="counter-text">Formations</span>
               </div>
             </div>
           </div>
@@ -414,22 +428,8 @@
                 <span class="ico-circle"><i class="ion-ios-people"></i></span>
               </div>
               <div class="counter-num">
-                <p class="counter">550</p>
-                <span class="counter-text">TOTAL CLIENTS (plus en vrai)</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-3 col-lg-3">
-            <div class="counter-box pt-4 pt-md-0">
-              <div class="counter-ico">
-                <span class="ico-circle"><i class="ion-ribbon-a"></i></span>
-              </div>
-              <div class="counter-num">
-                <p class="counter">36</p>
-                <span class="counter-text"
-                  >AWARD WON (non mais c'était dans le template, allez je le
-                  laisse)</span
-                >
+                <p class="counter">272</p>
+                <span class="counter-text">TOTAL CLIENTS</span>
               </div>
             </div>
           </div>
@@ -506,7 +506,9 @@
                   </p>
                   <span class="comit"><i class="fa fa-quote-right"></i></span>
                   <p class="description lead formation">
-                    12/01/2022 - Java SE Approfondissement
+                    <i class="ion-calendar"></i> 12/01/2022
+                    <i class="ion-ios-book"></i> Java SE Approfondissement
+
                   </p>
                 </div>
               </div>
@@ -530,7 +532,9 @@
                   </p>
                   <span class="comit"><i class="fa fa-quote-right"></i></span>
                   <p class="description lead formation">
-                    25/11/2022 - C# Initiation Approfondissement
+                    <i class="ion-calendar"></i> 25/11/2022
+                    <i class="ion-ios-book"></i> C# Initiation Approfondissement
+
                   </p>
                 </div>
               </div>
@@ -550,7 +554,8 @@
                   </p>
                   <span class="comit"><i class="fa fa-quote-right"></i></span>
                   <p class="description lead formation">
-                    06/05/2022 - Python Initiation
+                    <i class="ion-calendar"></i> 06/05/2022
+                    <i class="ion-ios-book"></i> Python Initiation
                   </p>
                 </div>
               </div>
@@ -573,7 +578,9 @@
                   </p>
                   <span class="comit"><i class="fa fa-quote-right"></i></span>
                   <p class="description lead formation">
-                    04/11/2022 - Javascript/Ecmascript Initiation
+                    <i class="ion-calendar"></i> 04/11/2022
+                    <i class="ion-ios-book"></i>
+                    Javascript/Ecmascript Initiation
                   </p>
                 </div>
               </div>
@@ -594,7 +601,9 @@
                   </p>
                   <span class="comit"><i class="fa fa-quote-right"></i></span>
                   <p class="description lead formation">
-                    11/03/2022 - Spring MVC Initiation Approfondissement
+                    <i class="ion-calendar"></i> 11/03/2022
+                    <i class="ion-ios-book"></i> Spring MVC Initiation
+                    Approfondissement
                   </p>
                 </div>
               </div>
@@ -616,7 +625,8 @@
                   </p>
                   <span class="comit"><i class="fa fa-quote-right"></i></span>
                   <p class="description lead formation">
-                    10/06/2022 - Java SE Approfondissement
+                    <i class="ion-calendar"></i> 10/06/2022
+                    <i class="ion-ios-book"></i> Java SE Approfondissement
                   </p>
                 </div>
               </div>
@@ -635,7 +645,8 @@
                   </p>
                   <span class="comit"><i class="fa fa-quote-right"></i></span>
                   <p class="description lead formation">
-                    25/11/2022 - C# Initiation Approfondissement
+                    <i class="ion-calendar"></i> 25/11/2022
+                    <i class="ion-ios-book"></i> C# Initiation Approfondissement
                   </p>
                 </div>
               </div>
@@ -655,7 +666,9 @@
                   </p>
                   <span class="comit"><i class="fa fa-quote-right"></i></span>
                   <p class="description lead formation">
-                    01/06/2022 - Python Intermédiaire : Bonnes pratiques
+                    <i class="ion-calendar"></i> 01/06/2022
+                    <i class="ion-ios-book"></i> Python Intermédiaire : Bonnes
+                    pratiques, multithreading et tests
                   </p>
                 </div>
               </div>
@@ -674,7 +687,9 @@
                   </p>
                   <span class="comit"><i class="fa fa-quote-right"></i></span>
                   <p class="description lead formation">
-                    04/11/2022 - Javascript/Ecmascript Initiation
+                    <i class="ion-calendar"></i> 04/11/2022
+                    <i class="ion-ios-book"></i>
+                    Javascript/Ecmascript Initiation
                   </p>
                 </div>
               </div>
@@ -692,7 +707,10 @@
                     nos questions et est disponible pour y répondre.
                   </p>
                   <span class="comit"><i class="fa fa-quote-right"></i></span>
-                  <p class="description lead formation">09/06/2022 - Maven</p>
+                  <p class="description lead formation">
+                    <i class="ion-calendar"></i> 09/06/2022
+                    <i class="ion-ios-book"></i> Maven
+                  </p>
                 </div>
               </div>
             </div>
@@ -803,7 +821,7 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="title-box-2">
-                      <h5 class="title-left">Send Message Us</h5>
+                      <h5 class="title-left">Send Message</h5>
                     </div>
                     <div>
                       <form
@@ -909,27 +927,11 @@
                     <div class="socials">
                       <ul>
                         <li>
-                          <a target="_blank" href=""
+                          <a
+                            target="_blank"
+                            href="https://www.facebook.com/sylvain.janet/"
                             ><span class="ico-circle"
                               ><i class="ion-social-facebook"></i></span
-                          ></a>
-                        </li>
-                        <li>
-                          <a target="_blank" href=""
-                            ><span class="ico-circle"
-                              ><i class="ion-social-instagram"></i></span
-                          ></a>
-                        </li>
-                        <li>
-                          <a target="_blank" href=""
-                            ><span class="ico-circle"
-                              ><i class="ion-social-twitter"></i></span
-                          ></a>
-                        </li>
-                        <li>
-                          <a target="_blank" href=""
-                            ><span class="ico-circle"
-                              ><i class="ion-social-pinterest"></i></span
                           ></a>
                         </li>
                         <li>
