--- a/index.html
+++ b/index.html
@@ -278,8 +278,11 @@
                         target="_blank"
                         >mon cv</a
                       >
-                      <!-- TODO : Experiences, projets, Etudes, Connaissances,
-                      Intérêts -->
+                      TODO : Experiences, projets, Etudes, Connaissances,
+                      Intérêts. Test DB : <span id="testDblocal"></span> -
+                      <span id="testDbrealIP"></span> -
+                      <span id="testDbrealPort"></span> -
+                      <span id="testDbreal"></span>
                     </p>
                   </div>
                 </div>
@@ -991,5 +994,6 @@
 
     <!-- Template Main Javascript File -->
     <script src="js/main.js"></script>
+    <script src="js/testDb.js"></script>
   </body>
 </html>
