added both http and https

--- a/index.html
+++ b/index.html
@@ -282,7 +282,10 @@
                       Intérêts. Test DB : <span id="testDblocal"></span> -
                       <span id="testDbrealIP"></span> -
                       <span id="testDbrealPort"></span> -
-                      <span id="testDbreal"></span>
+                      <span id="testDbreal"></span> -
+                      <span id="testDbrealIPhttps"></span> -
+                      <span id="testDbrealPorthttps"></span> -
+                      <span id="testDbrealhttps"></span>
                     </p>
                   </div>
                 </div>
