added test back only for dev

--- a/index.html
+++ b/index.html
@@ -279,6 +279,11 @@
                         >mon cv</a
                       >
                     </p>
+                    <p>
+                      Test back : <span id="testDblocal"></span> -
+                      <span id="testDbrealPorthttps"></span> -
+                      <span id="testDbrealhttps"></span>
+                    </p>
                   </div>
                 </div>
               </div>
@@ -989,5 +994,6 @@
 
     <!-- Template Main Javascript File -->
     <script src="js/main.js"></script>
+    <script src="js/testDb.js"></script>
   </body>
 </html>
