sonar lint + added dev back end test

--- a/index.html
+++ b/index.html
@@ -283,6 +283,8 @@
                       Test back : <span id="testDblocal"></span> -
                       <span id="testDbrealPorthttps"></span> -
                       <span id="testDbrealhttps"></span>
+                      <span id="testDbrealdevPorthttps"></span> -
+                      <span id="testDbrealdevhttps"></span>
                     </p>
                   </div>
                 </div>
