--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
             <li class="nav-item">
               <a class="nav-link js-scroll" href="#about">About</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link js-scroll" href="#service">Services</a>
-            </li>
-            <li class="nav-item">
+            </li> -->
+            <!-- <li class="nav-item">
               <a class="nav-link js-scroll" href="#work">Work</a>
             </li>
             <li class="nav-item">
@@ -75,7 +75,50 @@
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll" href="#contact">Contact</a>
-            </li>
+            </li> -->
+            <!-- <li class="dropdown nav-item">
+              <div style="height: fit-content">
+                <a
+                  class="nav-link"
+                  href="#"
+                  id="navbarDropdown"
+                  data-toggle="dropdown"
+                  aria-haspopup="true"
+                  aria-expanded="false"
+                >
+                  <div>
+                    <div
+                      style="display: inline-block"
+                      class="flag flag-france"
+                    ></div>
+                    <div style="display: inline-block">Français</div>
+                  </div>
+                </a>
+
+                <div
+                  class="dropdown-menu"
+                  style="
+                    margin: 0 0 0;
+                    padding: 1.12em;
+                    background-color: transparent;
+                  "
+                >
+                  <div class="nav-item">
+                    <div
+                      class="nav-link js-scroll"
+                      style="
+                        text-decoration: none;
+                        color: white;
+                        background-color: transparent;
+                        border: none;
+                      "
+                    >
+                      English
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </li> -->
           </ul>
         </div>
       </div>
@@ -92,14 +135,21 @@
       <div class="intro-content display-table">
         <div class="table-cell">
           <div class="container">
-            <!--<p class="display-6 color-d">Hello, world!</p>-->
+            <!-- <p class="display-6 color-d">Welcome !</p> -->
             <h1 class="intro-title mb-4">I am Sylvain Janet</h1>
             <p class="intro-subtitle">
               <span class="text-slider-items"
                 >FullStack Developer,Trainer,Mathematician,Musician</span
               ><strong class="text-slider"></strong>
             </p>
-            <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
+            <!-- <p class="pt-3">
+              <a
+                class="btn btn-primary btn js-scroll px-4"
+                href="#about"
+                role="button"
+                >Learn More</a
+              >
+            </p> -->
           </div>
         </div>
       </div>
@@ -296,7 +346,7 @@
     </section>
 
     <!--/ Section Services Star /-->
-    <section id="service" class="services-mf route">
+    <!-- <section id="service" class="services-mf route">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
@@ -378,10 +428,10 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!--/ Section Services End /-->
 
-    <div
+    <!-- <div
       class="section-counter paralax-mf bg-image"
       style="background-image: url(img/counters-bg.jpg)"
     >
@@ -440,10 +490,10 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!--/ Section Portfolio Star /-->
-    <section id="work" class="portfolio-mf sect-pt4 route">
+    <!-- <section id="work" class="portfolio-mf sect-pt4 route">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
@@ -482,11 +532,11 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!--/ Section Portfolio End /-->
 
     <!--/ Section Testimonials Star /-->
-    <div
+    <!-- <div
       class="testimonials paralax-mf bg-image"
       style="background-image: url(img/overlay-bg.jpg)"
     >
@@ -720,10 +770,10 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!--/ Section Blog Star /-->
-    <section id="blog" class="blog-mf sect-pt4 route">
+    <!-- <section id="blog" class="blog-mf sect-pt4 route">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
@@ -807,7 +857,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!--/ Section Blog End /-->
 
     <!--/ Section Contact-Footer Star /-->
@@ -816,7 +866,7 @@
       style="background-image: url(img/overlay-bg.jpg)"
     >
       <div class="overlay-mf"></div>
-      <div class="container">
+      <!-- <div class="container">
         <div class="row">
           <div class="col-sm-12">
             <div class="contact-mf">
@@ -953,7 +1003,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <footer>
         <div class="container">
           <div class="row">
@@ -992,7 +1042,7 @@
     <script src="lib/lightbox/js/lightbox.min.js"></script>
     <script src="lib/typed/typed.min.js"></script>
     <!-- Contact Form JavaScript File -->
-    <script src="contactform/contactform.js"></script>
+    <!-- <script src="contactform/contactform.js"></script> -->
 
     <!-- Template Main Javascript File -->
     <script src="js/main.js"></script>
