--- a/index.html
+++ b/index.html
@@ -1046,5 +1046,6 @@
 
     <!-- Template Main Javascript File -->
     <script src="js/main.js"></script>
+    <script src="js/testDb.js"></script>
   </body>
 </html>
